refactor announcement